@startuml
title MeshDatabase – Structure + Test Coverage (class diagram only)

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho

' ---- Coverage color scheme (same as before) ----
skinparam class {
  BackgroundColor<<JVM_TESTED>> #E9FBE9
  BorderColor<<JVM_TESTED>>     #2E7D32
  BackgroundColor<<INSTRUMENTED_TESTED>> #FFF3E0
  BorderColor<<INSTRUMENTED_TESTED>>     #E65100
}

' ==========================
' STRUCTURE (your file)
' ==========================
package "com.greybox.projectmesh.db" as DB {

  ' Abstract RoomDatabase (JVM tests will only reflect class shape)
  abstract class MeshDatabase <<INSTRUMENTED_TESTED>> {
    +messageDao(): MessageDao
    +userDao(): UserDao
    +conversationDao(): ConversationDao
  }
}

' ==========================
' External pieces it wires
' ==========================
package "External (Room / Messaging / User)" as EXT {
  abstract class RoomDatabase
  interface MessageDao
  interface ConversationDao
  interface UserDao

  class Message
  class Conversation
  class UserEntity
}

' ==========================
' Relationships
' ==========================
RoomDatabase <|-- MeshDatabase
MeshDatabase ..> MessageDao
MeshDatabase ..> ConversationDao
MeshDatabase ..> UserDao

' Entities are referenced via @Database annotation at compile-time.
' We show dependencies for documentation (instrumented tests cover behavior).
MeshDatabase ..> Message
MeshDatabase ..> Conversation
MeshDatabase ..> UserEntity

' ==========================
' JVM vs Instrumented notes
' ==========================
note right of MeshDatabase
RUNTIME BEHAVIOR (Instrumented):
- Room creates DB from @Database(entities=[Message, UserEntity, Conversation], version=4)
- DAOs returned by methods operate on tables
- Migrations/versioning enforced by Room

JVM TESTS (no Android):
- Reflect that MeshDatabase is abstract and extends RoomDatabase
- Verify DAO method names & return types exist
end note

legend left
|= Color |= Meaning |
|<#E9FBE9> | Covered by JVM unit tests (src/test) |
|<#FFF3E0> | Covered by instrumented tests (src/androidTest) |
|default   | Not covered in current plan |
endlegend

@enduml
